# ipipe

./: Cargo.toml
src/: handle.rs  lib.rs  pipe_unix.rs  pipe_windows.rs  static_pipe.rs  tests.rs
tests/: duplex.rs
