[package]
name = "ipipe"
version = "0.12.9"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Griffin O'Neill <gsoneill1003@gmail.com>"]
edition = "2021"
description = """
Cross-platform named-pipe API.
"""
keywords = ["pipe", "ipc", "fifo"]
homepage = "https://github.com/Eolu/ipipe"
repository = "https://github.com/Eolu/ipipe"
categories = ["filesystem", "os::unix-apis", "os::windows-apis", "api-bindings"]
documentation = "https://docs.rs/ipipe"

[features]
default = ["static_pipe", "rand"]
static_pipe = ["lazy_static", "flurry"]
channels = []
tokio_channels = ["tokio"]

[dependencies]
rand = { version = "0.8.5", optional = true }
lazy_static = { version = "1.4", optional = true }
flurry = { version = "0.5.0", optional = true }
tokio = { version = "1.36.0", optional = true, features = ["rt", "sync"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28.0", default-features = false, features = ["fs", "term"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winerror", "winbase", "handleapi", "fileapi", "namedpipeapi"]}
windows = { version = "0.54.0", features = ["Win32_Security", "Win32_Foundation"]}
